--- a/Game/app.config
+++ b/Game/app.config
@@ -5,5 +5,9 @@
         <add key="BoardSizeMaxX" value="4" />
         <add key="BoardSizeMinY" value="0" />
         <add key="BoardSizeMaxY" value="4" />
+        
+        <add key="StartingAtX" value="0" />
+        <add key="StartingAtY" value="0" />
+        <add key="StartingDirection" value="Direction.North" />
     </appSettings>
 </configuration>
